# ZotWatch

./: .env.example  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: daily_watch.yml  test_api.yml
config/: config.yaml
data/: journal_whitelist.csv
scripts/: test_api_connections.py
src/zotwatch/: __init__.py
src/zotwatch/cli/: main.py
src/zotwatch/config/: __init__.py  settings.py
src/zotwatch/core/: __init__.py  constants.py  models.py
src/zotwatch/infrastructure/: cache_base.py
src/zotwatch/infrastructure/embedding/: __init__.py  base.py  cache.py  cached.py  dashscope.py  factory.py  faiss_index.py  voyage.py
src/zotwatch/infrastructure/enrichment/: __init__.py  llm_extractor.py  publisher_extractors.py  stealth_browser.py
src/zotwatch/infrastructure/http/: client.py
src/zotwatch/infrastructure/storage/: sqlite.py
src/zotwatch/llm/: __init__.py  cluster_labeler.py  deepseek.py  factory.py  http_client.py  kimi.py  library_analyzer.py  openrouter.py  overall_summarizer.py  prompts.py  retry.py
src/zotwatch/output/: __init__.py  html.py  push.py
src/zotwatch/pipeline/: __init__.py  cluster_scorer.py  dedupe.py  featured.py  fetch.py  ingest.py  interest_ranker.py  journal_scorer.py  profile.py  profile_clusterer.py  profile_ranker.py  profile_stats.py  score.py  watch.py
src/zotwatch/sources/: __init__.py  base.py  crossref.py  openalex.py  zotero.py
src/zotwatch/templates/: report.html
src/zotwatch/utils/: __init__.py  hashing.py  temporal.py
